--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,15 +1,270 @@
-*{padding:0;margin:0;border:0;}
- *,*:before,*:after{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;}
- :focus,:active{outline:none;}
- a:focus,a:active{outline:none;}
- nav,footer,header,aside{display:block;}
- html,body{height:100%;width:100%;font-size:100%;line-height:1;font-size:14px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
- input,button,textarea{font-family:inherit;}
- input::-ms-clear{display:none;}
- button{cursor:pointer;}
- button::-moz-focus-inner{padding:0;border:0;}
- a,a:visited{text-decoration:none;}
- a:hover{text-decoration:none;}
- ul li{list-style:none;}
- img{vertical-align:top;}
- h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
+* {
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+*,
+*:before,
+*:after {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+:focus,
+:active {
+    outline: none;
+}
+a:focus,
+a:active {
+    outline: none;
+}
+nav,
+footer,
+header,
+aside {
+    display: block;
+}
+html,
+body {
+    height: 100%;
+    width: 100%;
+    font-size: 100%;
+    line-height: 1;
+    font-size: 16px;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+input,
+button,
+textarea {
+    font-family: inherit;
+}
+input::-ms-clear {
+    display: none;
+}
+button {
+    cursor: pointer;
+}
+button::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+}
+a,
+a:visited {
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: none;
+}
+ul li {
+    list-style: none;
+}
+img {
+    vertical-align: top;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+
+
+
+
+
+
+/* General Styling */
+
+.wrapper {
+    min-height: 100vh;
+}
+
+body {
+    font-family: Poppins, Tahoma, Geneva, Verdana, sans-serifs;
+    background-color: whitesmoke;
+}
+
+img, video {
+    max-width: 100%;;
+}
+
+h1 {
+    font-size: 1.5rem;
+    letter-spacing: 3px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+h2 {
+    font-size: 3rem;
+    font-weight: bolder;
+}
+
+h4{
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+/* Header styling */
+
+.header__mobile {
+    display: none;
+}
+
+.header__desktop {
+    width: 100%;
+    height: 64px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 24px;
+    border-bottom: black solid 1px;
+    position: fixed;
+    background-color:white;
+    top: 0;
+    left: 0;
+    z-index: 999;
+}
+
+.logo__container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.logo {
+    width: 32px;
+}
+
+.menu {
+    display: flex;
+    gap: 16px;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.2rem;
+}
+
+.menu__item a {
+    color: black;
+    font-weight: lighter;
+    transition: background-color 350ms ease-in,
+                color 350ms ease-in;
+    padding: 10px;
+    border-radius: 25px;
+}
+
+.menu__item a:hover {
+    background-color: navy;
+    color: whitesmoke;
+}
+
+/* Banner Styling */
+
+.banner {
+    padding: 6rem 0 2rem 1.5rem;
+    background-color:lightgrey;
+    min-height: 100vh;
+    display: flex;
+    width: 100%;
+}
+
+.banner__container {
+    display: flex;
+    gap: 3rem;
+    width: 90%;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.banner__img__container {
+    flex: 0 0 60%;
+    height: 100%; 
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+.banner__img__container img {
+    height: 100%;
+    object-fit: cover;
+}
+
+.banner__text {
+    flex: 1 1 40%;
+}
+
+.banner__text h4 {
+    margin-top: 2.5rem;
+}
+
+button {
+    width: 100%;
+    padding: 16px 0;
+    background-color: black;
+    color: white;
+    font-size: 1.1rem;
+    border-radius: 10px;
+    margin-top: 2.5rem;
+    opacity: 0.8;
+    transition: background-color 200ms ease-in;
+}
+
+button:hover {
+    background-color: navy;
+    color: white;
+}
+
+/* Posts Styling */
+
+.post-mobile {
+    display: none;
+}
+
+.posts {
+    display: flex;
+    align-items: center;
+    justify-content: stretch;
+}
+
+.container {
+    display: flex;
+    width: 100%;
+    padding: 32px 0 32px 24px;
+    align-items: stretch;
+}
+
+.main__container {
+    flex: 0 0 60%;
+}
+
+.side__container {
+    flex: 1 1 40%;
+    display: flex;
+    flex-direction: column;
+    background-color: blue;
+    justify-content: flex-start;
+}
+
+.side {
+    flex: 1 1 33.333%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.side__img {
+    width: 35%;
+}
+
+/* .post-big__img__container {
+    width: 100%;
+}
+
+.post-big__img__container img {
+    width: 100%;
+    object-fit: cover;
+} */
