--- a/src/css/style.css
+++ b/src/css/style.css
@@ -146,74 +146,93 @@ h4{
     gap: 16px;
     justify-content: space-between;
     align-items: center;
-    font-size: 1.2rem;
+    font-size: 0.9rem;
 }
 
-.menu__item a {
+.notblack {
     color: black;
     font-weight: lighter;
-    transition: background-color 350ms ease-in,
-                color 350ms ease-in;
-    padding: 10px;
+    transition: all 250ms ease-in;
     border-radius: 25px;
+    padding: 0 0.7rem;
 }
 
-.menu__item a:hover {
+.menu a:hover {
+    background-color: black;
+    color: whitesmoke;
+    padding: 0.7rem;
+}
+
+.menu a:active {
+  background-color: navy;
+  transition-property: background;
+  transition-duration: 0s;
+  transition-timing-function: linear;
+  transition-delay: 0s;
+}
+
+.black {
     background-color: navy;
     color: whitesmoke;
+    border-radius: 25px;
+    padding: 0.7rem;
+    transition: all 200ms ease-in;
 }
 
 /* Banner Styling */
 
 .banner {
     padding: 6rem 0 2rem 1.5rem;
-    background-color:lightgrey;
-    min-height: 100vh;
-    display: flex;
-    width: 100%;
+    background-color:rgb(201, 203, 208);
+    /* display: flex;
+    width: 100%; */
 }
 
 .banner__container {
     display: flex;
-    gap: 3rem;
-    width: 90%;
+    width: 100%;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
-.banner__img__container {
-    flex: 0 0 60%;
-    height: 100%; 
+.banner__container img {
+    flex: 1 0 60%;
+    /* flex: 0 0 60%;
+    height: 100%;  */
     border-radius: 20px;
     overflow: hidden;
 }
 
-.banner__img__container img {
-    height: 100%;
-    object-fit: cover;
-}
 
 .banner__text {
-    flex: 1 1 40%;
+    /* flex: 1 1 40%; */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 40%;
+    padding: 0 2rem;
 }
 
 .banner__text h4 {
-    margin-top: 2.5rem;
+    margin-top: 1.5rem;
+    margin-bottom: 2.5rem;
 }
 
 button {
-    width: 100%;
-    padding: 16px 0;
+    align-self: center;
+    background-color: black
+}
+
+button a {
+    padding: 0.5rem 6rem;
     background-color: black;
     color: white;
     font-size: 1.1rem;
     border-radius: 10px;
-    margin-top: 2.5rem;
-    opacity: 0.8;
     transition: background-color 200ms ease-in;
 }
 
-button:hover {
+button a:hover {
     background-color: navy;
     color: white;
 }
@@ -227,7 +246,6 @@ button:hover {
 .posts {
     display: flex;
     align-items: center;
-    justify-content: stretch;
 }
 
 .container {
@@ -239,10 +257,11 @@ button:hover {
 
 .main__container {
     flex: 0 0 60%;
+    padding-right: 1.5rem;
 }
 
 .side__container {
-    flex: 1 1 40%;
+    width: 40%;
     display: flex;
     flex-direction: column;
     background-color: blue;
@@ -250,14 +269,28 @@ button:hover {
 }
 
 .side {
-    flex: 1 1 33.333%;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    /* justify-content: flex-start; */
+    width: 100%;
+    height: auto;
+    
 }
 
 .side__img {
     width: 35%;
+    /* padding: 0rem 1rem 1rem 1rem; */
+}
+
+post-3__container {
+
+}
+
+/* .post-1__container .side__img {
+    padding-top: 0;
+} */
+
+.side__text {
+    align-sef: center;
 }
 
 /* .post-big__img__container {
