--- a/src/css/style.css
+++ b/src/css/style.css
@@ -258,7 +258,7 @@ h4 {
     display: none;
 }
 
-.posts {
+.container {
     display: flex;
     align-items: flex-start;
     color: #263159;
@@ -367,6 +367,7 @@ h4 {
     border-radius: 20px;
     overflow: hidden;
     transition: box-shadow 0.3s ease-in;
+    cursor: pointer;
 }
 
 .course__container:hover {
@@ -389,3 +390,39 @@ h4 {
     font-size: 120%;
     margin: 1rem 0;
 }
+
+.thesis {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.thesis h2 {
+    padding-top: 2rem;
+}
+
+.main__post h4 {
+    padding: 1.5rem 0 1rem 0;
+}
+
+.thesis__text__container p {
+    margin: 0 !important;
+}
+
+/* footer styling */
+
+footer {
+    background-color: #263159;
+    display: flex;
+    height: 6rem;
+    align-items: center;
+    justify-content: space-between;
+    color: #bab7ad;
+    padding: 0 2rem;
+}
+
+.footer ul {
+    display: flex;
+    gap: 1rem;
+}
+
